micronaut java 21 fix